--- a/index.html
+++ b/index.html
@@ -19,11 +19,9 @@
 
 <!-- CSS
 –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-		<link rel="stylesheet" href="css/normalize.css">
-		<link rel="stylesheet" href="css/skeleton.css">
-		<link rel="stylesheet" href="css/fontello.css">
-		<link rel="stylesheet" href="css/styles.css">
-		<link rel="scriptsheet" href="js/script.css"> 
+		<link rel="stylesheet" href="scss/fonts/_fontello.scss">
+		<link rel="stylesheet" href="css/style.css">
+		<link rel="scriptsheet" href="js/script.js"> 
 
 <!-- Favicon
 –––––––––––––––––––––––––––––––––––––––––––––––––– -->
